# godot-networktables

./: .gitignore  .gitmodules  CMakeLists.txt  dev.sh
.github/workflows/: build.yml
ci/: ci.bash  package.bash
project/: .gitignore  icon.svg.import  project.godot
project/addons/networktables/: networktables.gdextension  networktables.gdextension.uid
project/demo/: main.gd  main.gd.uid  main.tscn
src/: networktableentry.cpp  networktableentry.h  networktableinstance.cpp  networktableinstance.h  register_types.cpp  register_types.h
src/topic/: networktablegenericpublisher.cpp  networktablegenericpublisher.h  networktablegenericsubscriber.cpp  networktablegenericsubscriber.h  networktablepublisher.cpp  networktablepublisher.h  networktablesubscriber.cpp  networktablesubscriber.h  networktabletopic.cpp  networktabletopic.h
